# dewan_calcium

./: .gitignore  DewanAUROC.py  DewanManualCuration.py  DewanPlotting.py  README.md  environment-nix.yaml  environment.yaml  pyproject.toml  requirements.txt  setup.py
Helpers/: DewanFocalPlanes.py
Python/: DewanAUROC.py  DewanManualCuration.py  DewanPlotting.py  DewanStats.py
Python/DewanLabPython/: DewanAUROC.py  DewanPlotting.py
Python/DewanLabPython/Helpers/: DewanDataStore.py  DewanIOhandler.py  DewanImportDataHelper.py
Python/Helpers/: DewanIOhandler.py  DewanImportDataHelper.py  DewanManualCurationWidget.py
Python/Old/VincisLabPython/: sliding_probability.py  temp_aroc_for_odor.py
Python/Resources/: MaxProjection.tiff
conda_env/: environment-nix.yaml  environment-win64.yaml
dev/: auroc_test.py
dewan_calcium/: AUROC.py  DewanAUROC.py  DewanDeconv.py  DewanManualCuration.py  DewanPlotting.py  DewanStats.py  __init__.py  classifiers.py  deconv.py  plotting.py  stats.py
dewan_calcium/helpers/: DewanCombineData.py  DewanDataStore.py  DewanEPM.py  DewanIOhandler.py  DewanJSON.py  DewanManualCurationWidget.py  DewanSlidingProbability.py  DewanTraceTools.py  EPM.py  HFvFM.py  IO.py  combine_data.py  data_stores.py  parse_json.py  project_folder.py  sliding_prob.py  trace_tools.py
dewan_calcium/libs/: sliding_prob_numba.py
dewan_calcium/standalone/: combine_data.py  get_project_files.py  odors.py  old_to_new.py  test.ipynb
docs/: Test Data.md
