[project]
name = "dewan_calcium"
version = "2.0.0"
description = "Dewan Lab calcium imaging toolbox"
authors = [
    {name="Austin Pauley", email="pauley@psy.fsu.edu"},
    {name="Adam Dewan", email="dewan@psy.fsu.edu"},
    {name="Samuel Caton", email="caton@psy.fsu.edu"}]
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
'numpy<2.0.0',
'pandas>2.0',
'matplotlib>=3.9.1',
'openpyxl',
'scikit-learn>=1.5.1',
'scipy>=1.14.0',
'pyarrow',
'tqdm',
'xlsxwriter',
'cvxpy>=1.5.2',
'tables',
'shapely'
]

[project.optional-dependencies]
dev = [
    'jupyter>=1.0.0'
    ]
gui = [
    'pyside6==6.7.2',
    'pyqtdarktheme==2.1.0',
    'opencv-python==4.10.0.84',
    'roipoly @ git+https://github.com/jdoepfert/roipoly.py'
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=['dewan_calcium']
