[project]
name = "dewan_calcium"
version = "2.0.1"
description = "Dewan Lab calcium imaging toolbox"
authors = [
    {name="Austin Pauley", email="pauley@psy.fsu.edu"},
    {name="Adam Dewan", email="dewan@psy.fsu.edu"},
    {name="Samuel Caton", email="caton@psy.fsu.edu"}]
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    'dewan_manual_curation @ git+https://github.com/OlfactoryBehaviorLab/dewan_manual_curation',
    'numpy>=2.1.3',
    'pandas>=2.2.3',
    'matplotlib>=3.9.1',
    'scikit-learn>=1.5.1',
    'scipy>=1.14.0',
    'openpyxl',
    'pyarrow',
    'tqdm',
    'xlsxwriter',
    'tables',
]

[project.optional-dependencies]
jupyter = [
    'jupyter>=1.0.0'
    ]
epm = [
    'opencv-python==4.10.0.84',
    'roipoly @ git+https://github.com/jdoepfert/roipoly.py',
    'shapely<2.0.6',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages=['dewan_calcium']
